--- a/index.html
+++ b/index.html
@@ -14,6 +14,15 @@
     <p>
         <a class="link" href="#">Download Excursion (Coming soon!)</a>
     </p>
+    <video autoplay muted loop>
+    	<source src="resources/videos/excursion.mp4">
+    </video>
+    <!-- section personal travel guide -->
+    <h2>Your personal travel guide</h2>
+    <p>
+    	Excursion remembers places you like, and recommends new points of interest around you.
+    </p>
+    <img src="resources/images/camp.jpg" alt="camp">
 </body>
 
 </html>
