--- a/index.html
+++ b/index.html
@@ -23,6 +23,18 @@
     	Excursion remembers places you like, and recommends new points of interest around you.
     </p>
     <img src="resources/images/camp.jpg" alt="camp">
+    <!-- second section -->
+    <p>
+    	<img src="resources/images/phone.png" alt="phone logo">
+    </p>
+    <h2>Coming Soon for iPhone and Android</h2>
+    <p>
+    	<a class="link" href="#">Download Excursion (Coming soon!)</a>
+    </p>
+    <!-- footer -->
+    <div class="footer">
+    	<p>© Excursion</p>
+    </div>
 </body>
 
 </html>
